fix tests and validation