@@ -1,8 +1,11 @@
 package projektarbeit.immobilienverwaltung.repository;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 import projektarbeit.immobilienverwaltung.model.Wohnung;
 
 import java.util.List;
@@ -10,73 +13,49 @@ import java.util.List;
 import static org.assertj.core.api.Assertions.assertThat;
 import static projektarbeit.immobilienverwaltung.model.Land.DE;
 
+@ExtendWith(SpringExtension.class)
 @DataJpaTest
 public class WohnungRepositoryTest {
 
     @Autowired
     private WohnungRepository wohnungRepository;
 
-    /**
-     * Testet die Suche nach Wohnungen anhand eines Suchbegriffs.
-     */
+    private Wohnung testWohnung;
+
+    @BeforeEach
+    public void setUp() {
+        testWohnung = new Wohnung("Teststraße", "11", "83248", "Teststadt", DE, 200, 2000, 2, 2, false, false, false, false, null, null);
+        testWohnung = wohnungRepository.save(testWohnung);
+    }
+
     @Test
     public void testSearchWohnungen() {
-        Wohnung w1 = new Wohnung("Teststraße", "11", "83248", "Teststadt", DE, 200, 2000, 2, 2, false, false, false, false, null, null);
-        Wohnung w2 = new Wohnung("AndereStrasse", "11", "83248", "Teststadt", DE, 200, 2000, 2, 2, false, false, false, false, null, null);
-        wohnungRepository.save(w1);
-        wohnungRepository.save(w2);
-
         List<Wohnung> result = wohnungRepository.search("Teststraße");
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getStrasse()).isEqualTo("Teststraße");
-
-        result = wohnungRepository.search("AndereStrasse");
-        assertThat(result).hasSize(1);
-        assertThat(result.get(0).getStrasse()).isEqualTo("AndereStrasse");
+        assertThat(result.getFirst().getStrasse()).isEqualTo("Teststraße");
 
         result = wohnungRepository.search("11");
-        assertThat(result).hasSize(2);
+        assertThat(result).hasSize(1);
         assertThat(result).extracting(Wohnung::getHausnummer).containsOnly("11");
     }
 
-    /**
-     * Testet die Suche nach Wohnungen, wenn keine Übereinstimmungen gefunden werden.
-     */
     @Test
     public void testSearchWohnungen_NoMatches() {
-        Wohnung w1 = new Wohnung("Teststraße", "11", "83248", "Teststadt", DE, 200, 2000, 2, 2, false, false, false, false, null, null);
-        Wohnung w2 = new Wohnung("AndereStrasse", "11", "83248", "Teststadt", DE, 200, 2000, 2, 2, false, false, false, false, null, null);
-        wohnungRepository.save(w1);
-        wohnungRepository.save(w2);
-
         List<Wohnung> result = wohnungRepository.search("NonExistingStrasse");
         assertThat(result).isEmpty();
     }
 
-    /**
-     * Testet das Speichern und Finden einer Wohnung.
-     */
     @Test
     public void testSaveAndFindWohnung() {
-        Wohnung wohnung = new Wohnung("Teststraße", "11", "83248", "Teststadt", DE, 200, 2000, 2, 2, false, false, false, false, null, null);
-        wohnungRepository.save(wohnung);
-
-        Wohnung found = wohnungRepository.findById(wohnung.getWohnung_id()).orElse(null);
-
+        Wohnung found = wohnungRepository.findById(testWohnung.getWohnung_id()).orElse(null);
         assertThat(found).isNotNull();
         assertThat(found.getStrasse()).isEqualTo("Teststraße");
         assertThat(found.getHausnummer()).isEqualTo("11");
     }
 
-    /**
-     * Testet das Aktualisieren einer Wohnung.
-     */
     @Test
     public void testUpdateWohnung() {
-        Wohnung wohnung = new Wohnung("Teststraße", "11", "83248", "Teststadt", DE, 200, 2000, 2, 2, false, false, false, false, null, null);
-        wohnungRepository.save(wohnung);
-
-        Wohnung found = wohnungRepository.findById(wohnung.getWohnung_id()).orElse(null);
+        Wohnung found = wohnungRepository.findById(testWohnung.getWohnung_id()).orElse(null);
         assertThat(found).isNotNull();
 
         found.setStrasse("Neue Straße");
@@ -87,17 +66,32 @@ public class WohnungRepositoryTest {
         assertThat(updated.getStrasse()).isEqualTo("Neue Straße");
     }
 
-    /**
-     * Testet das Löschen einer Wohnung.
-     */
     @Test
     public void testDeleteWohnung() {
-        Wohnung wohnung = new Wohnung("Teststraße", "11", "83248", "Teststadt", DE, 200, 2000, 2, 2, false, false, false, false, null, null);
-        wohnungRepository.save(wohnung);
+        wohnungRepository.save(testWohnung);
 
-        wohnungRepository.delete(wohnung);
+        wohnungRepository.delete(testWohnung);
 
-        Wohnung found = wohnungRepository.findById(wohnung.getWohnung_id()).orElse(null);
+        Wohnung found = wohnungRepository.findById(testWohnung.getWohnung_id()).orElse(null);
         assertThat(found).isNull();
+    }
+
+    @Test
+    public void testFindNonExistentWohnung() {
+        Wohnung found = wohnungRepository.findById(999L).orElse(null);
+        assertThat(found).isNull();
+    }
+
+    @Test
+    public void testSearchWohnungByPartialMatch() {
+        wohnungRepository.deleteAll();
+        Wohnung w1 = new Wohnung("Teststraße", "11", "83248", "Teststadt", DE, 200, 2000, 2, 2, false, false, false, false, null, null);
+        Wohnung w2 = new Wohnung("Teststraße", "12", "83248", "Teststadt", DE, 200, 2000, 2, 2, false, false, false, false, null, null);
+        wohnungRepository.save(w1);
+        wohnungRepository.save(w2);
+
+        List<Wohnung> result = wohnungRepository.search("Test");
+        assertThat(result).hasSize(2);
+        assertThat(result).extracting(Wohnung::getStrasse).containsOnly("Teststraße");
     }
 }
